--- a/projects/chat/settings.json
+++ b/projects/chat/settings.json
@@ -1,9 +1,14 @@
 {
     "proxy": {
       "/chat/ws": {
-        "target": "ws://localhost:8080",
+        "target": "ws://localhost:8081",
         "ws": true
+      },
+      "/chat/upload-photo": {
+        "target": "http://localhost:8081"
+      },
+      "/chat/photos": {
+        "target": "http://localhost:8081"
       }
     }
-}
-  
+  }
